@@ -2,7 +2,7 @@
 # $Id$
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(instantsave, 0.1)
+AM_INIT_AUTOMAKE(instantsave, 0.2)
 
 AM_CONFIG_HEADER(config.h)
 
