@@ -1,3 +1,11 @@
+2008-06-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/instantsave.c:
+   Compilation fixes.
+ * configure.in:
+   Version bump.
+
+
 2008-05-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/instantsave.c:
